[FIX] fixed routing and added events

--- a/core.html
+++ b/core.html
@@ -35,10 +35,10 @@ data-wow-delay="0.1s">
 </button>
 <div class="collapse navbar-collapse" id="navbarCollapse">
 <div class="navbar-nav ms-auto p-4 p-lg-0">
-<a href="http://127.0.0.1:5502/ISTEindex.html#hero" class="nav-item nav-link active">HOME</a>
-<a href="http://127.0.0.1:5502/ISTEindex.html#about" class="nav-item nav-link">ABOUT US</a>
-<a href="http://127.0.0.1:5502/ISTEEVENTS.html" class="nav-item nav-link">EVENTS</a>
-<a href="http://127.0.0.1:5502/ISTECore.html" class="nav-item nav-link">CORE</a>
+<a href="index.html#hero" class="nav-item nav-link active">HOME</a>
+<a href="index.html#about" class="nav-item nav-link">ABOUT US</a>
+<a href="events.html" class="nav-item nav-link">EVENTS</a>
+<a href="core.html" class="nav-item nav-link">CORE</a>
 </div>
 <a href="#contact" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Contact<i
 class="fa fa-arrow-right ms-3"></i></a>
@@ -177,7 +177,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="bg-secondary text-center p-4 height">
 <h5 class="text-uppercase">Aakash Kapoor</h5>
 <span class="text-primary">Webmaster</span>
-<p>The thriving force of our creative segment, he has endless talents and a sharp, inquisitive mind. He not only leads but also creates an environment where every opinion is heard. A cooperative and sensitive companion for the team, who gives his best shots every time. Slightly reserved but super approachable, he's the friend we all look for, who makes it feel like home. His consistency and determination to work is unmatched.
+<p>The thriving force of our creative segment, he has endless talents and a sharp, inquisitive mind. He not only leads but also creates an environment where every opinion is heard. A cooperative and sensitive companion for the team, who gives his best shots every time. Slightly reserved but super approachable, he's the friend we all look for, who makes it feel like home.
 </p>
 </div>
 </div>
@@ -265,7 +265,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
     <div class="team-item">
     <div class="team-img position-relative overflow-hidden">
-    <img class="img-fluid" src="img\Core-20230409T091729Z-001\anurag v.JPG" alt="">
+    <img id="anurag" class="img-fluid" src="img\Core-20230409T091729Z-001\anurag v.JPG" alt="">
     <div class="team-social">
     <a class="btn btn-square" href="https://www.instagram.com/_anurag_2202_/"><i class="fab fa-instagram"></i></a>
     </div>
@@ -289,7 +289,7 @@ class="fa fa-arrow-right ms-3"></i></a>
         <div class="bg-secondary text-center p-4 height">
         <h5 class="text-uppercase">Pratik Tiwari</h5>
         <span class="text-primary">Working Committtee Head</span>
-        <p>He is responsible for managing the budget allocated to cultural events and activities and ensuring that the funds are used effectively to achieve the desired outcomes.His role as the head of the working committee is crucial in fostering a sense of belonging and community among students, staff, and faculty, promoting cross-cultural understanding, and celebrating the rich diversity of cultures represented in the college.With his good leadership qualities he handles every working committee members and gives experience to them.One of your key responsibilities will be to collaborate with other committees and teams in college to ensure that cultural events are well-integrated into the overall college experience and align with the college's mission and values.
+        <p>He is responsible for managing the budget allocated to cultural events and activities and ensuring that the funds are used effectively to achieve the desired outcomes.His role as the head of the working committee is crucial in fostering a sense of belonging and community among students, staff, and faculty, promoting cross-cultural understanding, and celebrating the rich diversity of cultures represented in the college.With his good leadership qualities he handles every working committee members and gives experience to them.
         </p>
         </div>
         </div>
@@ -305,11 +305,26 @@ class="fa fa-arrow-right ms-3"></i></a>
             <div class="bg-secondary text-center p-4 height">
             <h5 class="text-uppercase">Mukund Dhanuka</h5>
             <span class="text-primary">Working Committtee Head</span>
-            <p>His composure and way of working with the team is something we all admire. As the head of a working committee in college, your primary responsibility is to ensure that all cultural events and activities are well-planned, executed seamlessly, and achieve their intended objectives.You will be responsible for leading and coordinating the efforts of a team of individuals who are passionate about promoting cultural diversity and inclusivity in college.
+            <p>His composure and way of working with the team is something we all admire. As the head of a working committee in college, your primary responsibility is to ensure that all cultural events and activities are well-planned, executed seamlessly, and achieve their intended objectives.You will be responsible for leading and coordinating the efforts of a team of individuals who are passionate about promoting cultural diversity and inclusivity in college.One of your key responsibilities will be to collaborate with other committees and align with the college's mission and values.
             </p>
             </div>
             </div>
-            </div>        
+            </div> 
+<div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="team-item">
+                <div class="team-img position-relative overflow-hidden">
+                <img id="core" class="img-fluid" src="img\Core-20230409T091729Z-001\core.JPG" alt="">
+                <div class="team-social">
+                </div>
+                </div>
+                <div class="bg-secondary text-center p-4 height">
+                <h5 class="text-uppercase">CORE</h5>
+                <span class="text-primary">committee</span>
+                <p>Beginning the remarkable journey, the team has a long way to go aiming to broaden the horizons with their strongest pursuits.Core for the year 2022-2023 are the embodiment of dedication and commitment towards technical education.It has been entrusted with the responsibility of shaping the future of technical education, and we are certain that they will leave no stone unturned in their pursuit of excellence.
+                </p>
+                </div>
+                </div>
+                </div>                   
 </section>
 <!-- Team End -->
 <!-- Working Hours Start -->
@@ -450,7 +465,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <a class="btn btn-link" href="#about">About Us</a>
     <a class="btn btn-link" href="#contact">Contact Us</a>
     <a class="btn btn-link" href="#team">Our Team</a>
-    <a class="btn btn-link" href="#events">Our Events</a>
+    <a class="btn btn-link" href="core.html">Our Core</a>
+    <a class="btn btn-link" href="events.html">Our Events</a>
     <!-- <a class="btn btn-link" href=""></a> -->
     </div>
     <div class="col-lg-4 col-md-6">
