--- a/events.html
+++ b/events.html
@@ -43,10 +43,10 @@ data-wow-delay="0.1s">
 </button>
 <div class="collapse navbar-collapse" id="navbarCollapse">
 <div class="navbar-nav ms-auto p-4 p-lg-0">
-    <a href="http://127.0.0.1:5502/ISTEindex.html#hero" class="nav-item nav-link active">HOME</a>
-    <a href="http://127.0.0.1:5502/ISTEindex.html#about" class="nav-item nav-link">ABOUT US</a>
-    <a href="http://127.0.0.1:5502/ISTEEVENTS.html" class="nav-item nav-link">EVENTS</a>
-    <a href="http://127.0.0.1:5502/ISTECore.html" class="nav-item nav-link">CORE</a>
+    <a href="index.html#hero" class="nav-item nav-link active">HOME</a>
+    <a href="index.html#about" class="nav-item nav-link">ABOUT US</a>
+    <a href="./events/" class="nav-item nav-link">EVENTS</a>
+    <a href="core.html" class="nav-item nav-link">CORE</a>
 </div>
 <a href="#contact" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Contact<i
 class="fa fa-arrow-right ms-3"></i></a>
@@ -67,7 +67,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <img class="img-fluid" src="img\fiesta2logo.jpg" alt="">
+    <a href="fiesta.html">
+    <img id="fiesta"class="img-fluid" src="img\fiesta2logo.jpg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">FIESTA 2022-2023</h3>
@@ -85,7 +86,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: auto; height: auto;">
-    <img id="multicon" class="img-fluid" src="img/Multicon 2023.jpg" alt="">
+    <a href="multicon.html">
+    <img id="multicon" class="img-fluid" src="img/Multicon 2023.jpg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
@@ -104,7 +106,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: auto; height: auto;">
-    <img class="img-fluid" src="img/Resume Building.jpeg" alt="">
+    <a href="resume.html">
+    <img id="resume"class="img-fluid" src="img/Resume Building.jpeg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
@@ -119,29 +122,12 @@ class="fa fa-arrow-right ms-3"></i></a>
     </div>
     </div>
     </div>
-    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-    <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
-    <div class="ps-4">
-    <div style="width: auto; height: auto;">
-    <img id="resume" class="img-fluid" src="img/IMG_3064.jpg" alt="">
-    </div>
-    <br>
-    <h3 class="text-uppercase mb-3">
-    Resume building Webinar</h3>
-    <p>29th Aug<br>
-    <li>Speaker from TT-AIML of TCET itself</li>
-    <li>What and How's of UI/UX were explained </li>
-    <li>85+ students participated in the seminar</li>
-    <li>Design Process was understood</li>
-    </p>
-    </div>
-    </div>
-    </div>
-    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <img class="img-fluid" src="img/C - Language Workshop.jpeg" alt="">
+    <a href="cworkshop.html">
+    <img id="workshopc"class="img-fluid" src="img/C - Language Workshop.jpeg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
@@ -160,11 +146,32 @@ class="fa fa-arrow-right ms-3"></i></a>
     </div>
     </div>
     </div>
+    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
+        <div class="ps-4">
+        <div style="width: auto; height: auto;">
+        <a href="calciworkshop.html">
+        <img id="scificalci" class="img-fluid" src="img\Scientific Calculator.jpeg" alt=""></a>
+        </div>
+        <br>
+        <h3 class="text-uppercase mb-3">
+        SCIENTIFIC-CALCULATOR WORKSHOP</h3>
+        <p>Scientific calculators are an essential tool for engineering students, and it's crucial for them to be well-versed in using these calculators to solve complex mathematical problems.</p>
+        <p>3rd December<br>
+        <li>All  students from group1 & group2 of every departments were present.</li>
+        <li>They also got the activity hours for the workshop.</li>
+        <li>Speakers for  the event were Mr.Shah Alam khan vice.Chairperson & Ms.Sakshi Singh Treasurer cores of ISTE.</li>
+        <li>It was very beneficial for the first year students for learning to Opertate Sci-fi-Calculators.</li>
+        </p>
+        </div>
+        </div>
+        </div>
     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <img class="img-fluid" src="img/Talent Show.jpg" alt="">
+    <a href="talent.html">
+    <img id="talent"class="img-fluid" src="img/Talent Show.jpg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
@@ -172,6 +179,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <p>15th November<br>
     <li>The First Event where the First Year Students showcase their talents.</li>
     <li>This is a opportunity for them, to create life long friends and memories.</li>
+    <li>Talent shows provide an opportunity for individuals to express themselves, build confidence, and gain exposure to their talents. </li>
+    <li>Talent shows can be competitive or non-competitive, with prizes or recognition given to outstanding performers.</li>
     </p>
     </div>
     </div>
@@ -180,7 +189,8 @@ class="fa fa-arrow-right ms-3"></i></a>
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
         <div class="ps-4">
         <div style="width: 100%; height: auto;">
-        <img class="img-fluid" src="img/Zephyr 2022.jpg" alt="">
+        <a href="zephyr.html">
+        <img id="zephyr" class="img-fluid" src="img/Zephyr 2022.jpg" alt=""></a>
         </div>
         <br>
         <h3 class="text-uppercase mb-3">
@@ -202,14 +212,17 @@ class="fa fa-arrow-right ms-3"></i></a>
             <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
             <div class="ps-4">
             <div style="width: 100%; height: auto;">
-            <img class="img-fluid" src="img/Roadmap To Engineering 2022.jpg" alt="">
+            <a href="tour.html">    
+            <img id="tour"class="img-fluid" src="img/Roadmap To Engineering 2022.jpg" alt=""></a>
             </div>
             <br>
             <h3 class="text-uppercase mb-3">
             Institute Tour</h3>
-            <p>1ST October<br>
+            <p>1st October<br>
             <li>The Students get familiar to the Campus. </li>
             <li>A place where their new journey of Life is going to begin.</li>
+            <li>An institute tour is a planned visit to an educational institution such as a school, college, university, or vocational training center.</li>
+            <li>The purpose of an institute tour is to give visitors a firsthand experience of the facilities, resources, and programs offered by the institution.</li>
             <li>CAMPS YOU GOT THIS !!!</li>
             </p>
             </div>
@@ -219,13 +232,14 @@ class="fa fa-arrow-right ms-3"></i></a>
                 <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
                 <div class="ps-4">
                 <div style="width: 100%; height: auto;">
-                <img class="img-fluid" src="img/download.jpg" alt="">
+                <a href="stem.html">
+                <img id="stem"class="img-fluid" src="img/download.jpg" alt=""></a>
                 </div>
                 <br>
                 <h3 class="text-uppercase mb-3">
                 STEM</h3>
-                <p>15st JUNE</p>
-                <p>In science, technology, engineering, and mathematics (STEM), STEM refers to the academic disciplines of science, technology, engineering, and mathematics, which are considered essential for advancing innovation and economic growth.<br>
+                <p>15th JUNE</p>
+                <p><li>In science, technology, engineering, and mathematics (STEM), STEM refers to the academic disciplines of science, technology, engineering, and mathematics, which are considered essential for advancing innovation and economic growth.</li><br>
                 <li>The way the College functions, and how the syllabus would be in their upcoming semesters. </li>
                 <li>This is essential for Student's Growth in Academics.</li>
                 <li>Hence its an IMPORTANT event to Attend.</li>
@@ -331,7 +345,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <a class="btn btn-link" href="#about">About Us</a>
     <a class="btn btn-link" href="#contact">Contact Us</a>
     <a class="btn btn-link" href="#team">Our Team</a>
-    <a class="btn btn-link" href="#events">Our Events</a>
+    <a class="btn btn-link" href="core.html">Our Core</a>
+<a class="btn btn-link" href="events.html">Our Events</a>
     <!-- <a class="btn btn-link" href=""></a> -->
     </div>
     <div class="col-lg-4 col-md-6">
