--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ data-wow-delay="0.1s">
 </button>
 <div class="collapse navbar-collapse" id="navbarCollapse">
 <div class="navbar-nav ms-auto p-4 p-lg-0">
-    <a href="ISTEindex.html#hero" class="nav-item nav-link active">HOME</a>
-    <a href="ISTEindex.html#about" class="nav-item nav-link">ABOUT US</a>
-    <a href="ISTEEVENTS.html" class="nav-item nav-link">EVENTS</a>
-    <a href="ISTECore.html" class="nav-item nav-link">CORE</a>
+    <a href="index.html#hero" class="nav-item nav-link active">HOME</a>
+    <a href="index.html#about" class="nav-item nav-link">ABOUT US</a>
+    <a href="events.html" class="nav-item nav-link">EVENTS</a>
+    <a href="core.html" class="nav-item nav-link">CORE</a>
 </div>
 <a href="#contact" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Contact<i
 class="fa fa-arrow-right ms-3"></i></a>
@@ -141,12 +141,12 @@ Let's use this platform to network, build relationships, and create opportunitie
 <section id="team">
 <div id="team" class="container-xxl py-5">
 <div class="container">
-<div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-<p class="d-inline-block bg-secondary text-primary py-1 px-4">Our Faculties Incharge</p>
+<div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;" >
+<p class="d-inline-block bg-secondary text-primary py-1 px-4">Our Faculties Incharge & team</p>
 <h1 class="text-uppercase">Meet Our Family</h1>
 </div>
-<div class="row g-3">
-<div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+<div class="row g-4">
+<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
         <div class="team-item">
         <div class="team-img position-relative overflow-hidden">
         <img id="rohitsir" class="img-fluid" src="img\Core-20230409T091729Z-001\saved rhit sir.jpeg" alt="">
@@ -161,7 +161,7 @@ Let's use this platform to network, build relationships, and create opportunitie
         </div>
         </div>
         </div>
-<div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item">
             <div class="team-img position-relative overflow-hidden">
             <img id="kiransir" class="img-fluid" src="img\Core-20230409T091729Z-001\kiran sir.jpeg" alt="">
@@ -176,10 +176,10 @@ Let's use this platform to network, build relationships, and create opportunitie
             </div>
             </div>
             </div>
-<div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\Neha Ma'am.webp" alt="">
+<img id="neha"class="img-fluid" src="img\Core-20230409T091729Z-001\Neha Ma'am.webp" alt="">
 <div class="team-social">
 </div>
 </div>
@@ -190,10 +190,6 @@ Let's use this platform to network, build relationships, and create opportunitie
 </p>
 </div>
 </div>
-</div>        
-<div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-<div class="team-item">
-<div class="team-img position-relative overflow-hidden">
 </div>
 </div>
 </div>      
@@ -250,7 +246,7 @@ Let's use this platform to network, build relationships, and create opportunitie
 <div class="container">
 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
 <p class="d-inline-block bg-secondary text-primary py-1 px-4">Experiences</p>
-<h1 class="text-uppercase">What Our Members Say!</h1>
+<h1 class="text-uppercase">What Our ex.Core Say!</h1>
 </div>
 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
 <div class="testimonial-item text-center"
@@ -263,7 +259,7 @@ which helped me to improve my communication and interpersonal skills and gain co
 </span>
 </div>
 <div class="testimonial-item text-center"
-data-dot="<img class='img-fluid' src='img/nidhi.jpeg' alt=''>">
+data-dot="<img class='img-fluid' src='img\Core-20230409T091729Z-001\vinayak.JPG' alt=''>">
 <h4 class="text-uppercase">Ms.Shubhangi Joshi</h4>
 <p class="text-primary">TE-ELEX(E&CS)   ex.vice.CP</p>
 <span class="fs-5">I was able to identify my strengths and weaknesses and learn effective strategies
@@ -369,7 +365,8 @@ Mumbai, Maharashtra - 400101</span>
 <a class="btn btn-link" href="#about">About Us</a>
 <a class="btn btn-link" href="#contact">Contact Us</a>
 <a class="btn btn-link" href="#team">Our Team</a>
-<a class="btn btn-link" href="#events">Our Events</a>
+<a class="btn btn-link" href="core.html">Our Core</a>
+<a class="btn btn-link" href="events.html">Our Events</a>
 <!-- <a class="btn btn-link" href=""></a> -->
 </div>
 <div class="col-lg-4 col-md-6">
@@ -423,3 +420,4 @@ Designed By <a class="border-bottom" href="https://tcet-iste.org">ISTE members</
 <script src="js/main.js"></script>
 </body>
 </html>
+
