--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
 <meta content="" name="keywords">
 <meta content="" name="description">
 <!-- Favicon -->
-<link href="img\Logos-20230409T091937Z-001\TCET-ISTE Logo (Transparent Backgroud) (1).png" rel="icon">
+<link href="img\Logos-20230409T091937Z-001\iste.png" rel="icon">
 <!-- Google Web Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
