--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ Let's use this platform to network, build relationships, and create opportunitie
 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
 <div class="testimonial-item text-center"
 data-dot="<img class='img-fluid' src='img/arvind.jpeg' alt='' >">
-<h4 class="text-uppercase">Ms.Suhani Pandya</h4>
+<h4 class="text-uppercase">Mr.Hardik Rampariya</h4>
 <p class="text-primary">TE-E&TC  ex.Event manager</p>
 <span class="fs-5">As a member of the ISTE, I had the opportunity to participate
 in various activities such as public speaking, group discussions, and team-building exercises,
@@ -261,7 +261,7 @@ which helped me to improve my communication and interpersonal skills and gain co
 <div class="testimonial-item text-center"
 data-dot="<img class='img-fluid' src='img\Core-20230409T091729Z-001\vinayak.JPG' alt=''>">
 <h4 class="text-uppercase">Ms.Shubhangi Joshi</h4>
-<p class="text-primary">TE-ELEX(E&CS)   ex.vice.CP</p>
+<p class="text-primary">TE-ELEX(E&CS) ex.vice.CP</p>
 <span class="fs-5">I was able to identify my strengths and weaknesses and learn effective strategies
 for self-improvement. Through workshops and mentorship programs, I gained valuable insights into
 personal branding, leadership, and emotional intelligence, which have been instrumental in my
