--- a/core.html
+++ b/core.html
@@ -90,7 +90,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 </div>
 </div>
 <div class="bg-secondary text-center p-4 height">
-<h5 class="text-uppercase">Shah Alam</h5>
+<h5 class="text-uppercase">Shah Alam K/h5>
 <span class="text-primary">Vice Chairperson</span>
 <p>Filled with very right amount of cheerfulness and confidence he's a big time problem solver. He's proactive and brilliant at expressing his opinions and himself. With the warmest personality, you can go to him anytime you need a helping hand. He's the go-getter and optimizer of the team who's always passionate about the work he does. The one with most integrity!
 </p>
