--- a/calciworkshop.html
+++ b/calciworkshop.html
@@ -156,7 +156,7 @@ class="fa fa-arrow-right ms-3"></i></a>
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
         <div class="ps-4">
         <div style="width: auto; height: auto;">
-        <a href="scificalci.html">
+        <a href="calciworkshop.html">
         <img id="scificalci" class="img-fluid" src="img\Scientific Calculator.jpeg" alt=""></a>
         </div>
         <br>
