--- a/core.html
+++ b/core.html
@@ -327,7 +327,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item">
                             <div class="team-img position-relative overflow-hidden">
-                                <img id="anurag" class="img-fluid" src="img\Core-20230409T091729Z-001\anurag v.JPG"
+                                <img id="anurag" class="img-fluid" src="img\anurag v.JPG"
                                     alt="">
                                 <div class="team-social">
                                     <a class="btn btn-square" href="https://www.instagram.com/_anurag_2202_/"><i
@@ -350,7 +350,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item">
                             <div class="team-img position-relative overflow-hidden">
-                                <img class="img-fluid" src="img\Core-2023091729Z-001\anurag v.JPG" alt="">
+                                <img id="pratik" img class="img-fluid" src="img\pratik sirog.png" alt="">
                                 <div class="team-social">
                                     <a class="btn btn-square" href="https://www.instagram.com/__.pratikkkk.__/"><i
                                             class="fab fa-instagram"></i></a>
@@ -373,7 +373,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item">
                             <div class="team-img position-relative overflow-hidden">
-                                <img class="img-fluid" src="i20230409T091729Z-001\anurag v.JPG" alt="">
+                                <img id="mukund" img class="img-fluid" src="img\mukund.png" alt="">
                                 <div class="team-social">
                                     <a class="btn btn-square" href="https://www.instagram.com/mukund_dhanuka/"><i
                                             class="fab fa-instagram"></i></a>
@@ -385,7 +385,7 @@
                                 <p>His composure and way of working with the team is something we all admire. As the
                                     head of a working committee in college, your primary responsibility is to ensure
                                     that all cultural events and activities are well-planned, executed seamlessly, and
-                                    achieve their intended objectives.You will be responsible for leading and
+                                    achieve their intended objectives.You will be responsible for 
                                     coordinating the efforts of a team of individuals who are passionate about promoting
                                     cultural diversity and inclusivity in college.One of your key responsibilities will
                                     be to collaborate with other committees and align with the college's mission and
