--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 </div>
                 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                     <div class="testimonial-item text-center"
-                        data-dot="<img class='img-fluid' src='img/arvind.jpeg' alt='' >">
+                        data-dot="<img class='img-fluid' src='img\hardik.webp' alt='' >">
                         <h4 class="text-uppercase">Mr.Hardik Rampariya</h4>
                         <p class="text-primary">TE-E&TC ex.Event manager</p>
                         <span class="fs-5">As a member of the ISTE, I had the opportunity to participate
@@ -305,7 +305,7 @@
                         </span>
                     </div>
                     <div class="testimonial-item text-center"
-                        data-dot="<img class='img-fluid' src='img\Core-20230409T091729Z-001\vinayak.JPG' alt=''>">
+                        data-dot="<img class='img-fluid' src='img\shubhangi.webp' alt=''>">
                         <h4 class="text-uppercase">Ms.Shubhangi Joshi</h4>
                         <p class="text-primary">TE-ELEX(E&CS) ex.vice.CP</p>
                         <span class="fs-5">I was able to identify my strengths and weaknesses and learn effective
