all updated new iste web with solving problem of navbar in mobile mode and added dark/light mode and pics

--- a/stem.html
+++ b/stem.html
@@ -58,7 +58,28 @@ class="fa fa-arrow-right ms-3"></i></a>
 </nav>
 <!-- Navbar End -->
 <!-- About End -->
-<!-- Events Start -->
+<div class="image-container">
+    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.42.08.jpeg" alt="Image Description" width="auto" height="500">
+ </div><br>
+<div class="image-container">
+    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.42.30.jpeg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.42.31.jpeg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.44.40.jpeg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.44.42.jpeg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.44.43.jpeg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.44.44.jpeg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <!-- Events Start -->
 <section id="events">
     <div id="events" class="container-xxl py-5">
     <div class="container">
@@ -243,7 +264,7 @@ class="fa fa-arrow-right ms-3"></i></a>
                 <h3 class="text-uppercase mb-3">
                 STEM</h3>
                 <p>15th JUNE</p>
-                <p><li>In science, technology, engineering, and mathematics (STEM), STEM refers to the academic disciplines of science, technology, engineering, and mathematics, which are considered essential for advancing innovation and economic growth.</li><br>
+                <p>In science, technology, engineering, and mathematics (STEM), STEM refers to the academic disciplines of science, technology, engineering, and mathematics, which are considered essential for advancing innovation and economic growth.<br>
                 <li>The way the College functions, and how the syllabus would be in their upcoming semesters. </li>
                 <li>This is essential for Student's Growth in Academics.</li>
                 <li>Hence its an IMPORTANT event to Attend.</li>
