--- a/resume.html
+++ b/resume.html
@@ -36,8 +36,8 @@ class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn"
 data-wow-delay="0.1s">
-<a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-<h1 class="mb-0 text-primary text-uppercase"><img src="img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).png" width="30%"></h1>
+
+<h1 class="mb-0 text-primary text-uppercase"><img src="img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).png" width="25%"></h1>
 <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 <span class="navbar-toggler-icon"></span>
 </button>
@@ -51,6 +51,10 @@ data-wow-delay="0.1s">
 <a href="#contact" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Contact<i
 class="fa fa-arrow-right ms-3"></i></a>
 </div>
+<div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" id="darkModeToggle" onchange="toggleDarkMode(this)" />
+    <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
+  </div>
 </nav>
 <!-- Navbar End -->
 <!-- About End -->
@@ -132,7 +136,7 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <a href="c.html">
+    <a href="cworkshop.html">
     <img id="workshopc"class="img-fluid" src="img/C - Language Workshop.jpeg" alt=""></a>
     </div>
     <br>
@@ -156,7 +160,7 @@ class="fa fa-arrow-right ms-3"></i></a>
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
         <div class="ps-4">
         <div style="width: auto; height: auto;">
-        <a href="scificalci.html">
+        <a href="calciworkshop.html">
         <img id="scificalci" class="img-fluid" src="img\Scientific Calculator.jpeg" alt=""></a>
         </div>
         <br>
