--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@ Let's use this platform to network, build relationships, and create opportunitie
 <div class="container">
 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
 <p class="d-inline-block bg-secondary text-primary py-1 px-4">Experiences</p>
-<h1 class="text-uppercase">What Our ex.Core Say!</h1>
+<h1 class="text-uppercase">What Our ex-Core Says!</h1>
 </div>
 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
 <div class="testimonial-item text-center"
 data-dot="<img class='img-fluid' src='img\hardik.webp' alt='' >">
-<h4 class="text-uppercase">Mr.Hardik</h4>
+<h4 class="text-uppercase">Mr.Hardik Ramparia</h4>
 <p class="text-primary">Former Chairperson</p>
 <span class="fs-5">As a member of the ISTE, I had the opportunity to participate
 in various activities such as public speaking, group discussions, and team-building exercises,
