added Tour webpage and resolved issue of toggles

--- a/core.html
+++ b/core.html
@@ -44,9 +44,9 @@ data-wow-delay="0.1s">
 class="fa fa-arrow-right ms-3"></i></a>
 </div>
 <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="darkModeToggle" onchange="toggleDarkMode(this)" />
+    <input class="form-check-input" type="checkbox" id="darkModeToggle" onchange="toggleDarkMode()" />
     <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
-  </div>
+</div>
 </nav>
 <!-- Navbar End -->
 <!-- Team Start -->
@@ -266,22 +266,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 </div>
 </div>
 </div>
-<div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-    <div class="team-item">
-    <div class="team-img position-relative overflow-hidden">
-    <img id="anurag" class="img-fluid" src="img\Core-20230409T091729Z-001\anurag v.JPG" alt="">
-    <div class="team-social">
-    <a class="btn btn-square" href="https://www.instagram.com/_anurag_2202_/"><i class="fab fa-instagram"></i></a>
-    </div>
-    </div>
-    <div class="bg-secondary text-center p-4 height">
-    <h5 class="text-uppercase">Anurag Vishwakarma</h5>
-    <span class="text-primary">Supervisor</span>
-    <p>His composure and way of working with the team is something we all admire. He analyzes every problem deeply and gives the best solutions accordingly. With the best of multitasking and management skills, his technical and creative understanding is impeccable. Working with great efficiency, he creates a great environment for everyone around him to perform better. All of these aspects make him a great asset for the team.
-    </p>
-    </div>
-    </div>
-    </div>
+<div class="row justify-content-center">
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
         <div class="team-item">
         <div class="team-img position-relative overflow-hidden">
@@ -319,6 +304,7 @@ class="fa fa-arrow-right ms-3"></i></a>
                 <div class="team-img position-relative overflow-hidden">
                 <img id="core" class="img-fluid" src="img\Core-20230409T091729Z-001\core.JPG" alt="">
                 <div class="team-social">
+                <a class="btn btn-square" href="https://www.instagram.com/iste_tcet/"><i class="fab fa-instagram"></i></a>
                 </div>
                 </div>
                 <div class="bg-secondary text-center p-4 height">
@@ -328,7 +314,8 @@ class="fa fa-arrow-right ms-3"></i></a>
                 </p>
                 </div>
                 </div>
-                </div>                   
+                </div>  
+</div>                 
 </section>
 <!-- Team End -->
 <!-- Working Hours Start -->
