--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Let's use this platform to network, build relationships, and create opportunitie
 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img id="neha"class="img-fluid" src="img\Core-20230409T091729Z-001\Neha Ma'am.webp" alt="">
+<img id="neha"class="img-fluid" src="img\Core-20230409T091729Z-001\Neha.JPG" alt="">
 <div class="team-social">
 </div>
 </div>
