Edited few things & added date of the events

--- a/core.html
+++ b/core.html
@@ -260,7 +260,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 </div>
 <div class="bg-secondary text-center p-4 height">
 <h5 class="text-uppercase">Kunal Pawar</h5>
-<span class="text-primary">Publication Head</span>
+<span class="text-primary">Supervisor</span>
 <p>Calm, vigilant and equanimous. That's how we define him. He's smart, expressive and a great communicator. Not to mention, his way of handling things, especially when it comes to technical work, is exemplary. Talk less and work more is his motto. His hardwork and diligence is what makes him a true gentleman. His dedication towards his responsibilities is something we should all acknowledge.
 </p>
 </div>
