--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Let's use this platform to network, build relationships, and create opportunitie
 <div class="row g-4">
 <div class="col-md-6">
 <h3 class="text-uppercase mb-3">OUR MISSION</h3>
-<p class="mb-0">TCET-ISTE's mission is to help learners thrive in a connected world by fostering a passionate skilled learning culture,  leveraging experience and skills, and continuously enhancing learning and teaching, resulting in a symbiotic environment for all departments. The ISTE-TCET Student's chapter is pleased to announce that it has attracted more than 500 members from various departments.</p>
+<p class="mb-0">TCET-ISTE's mission is to help learners thrive in a connected world by fostering a passionate skilled learning culture,  leveraging experience and skills, and continuously enhancing learning and teaching, resulting in a symbiotic environment for all departments. The ISTE-TCET Student's chapter is pleased to announce that it has attracted more than 500 members from various departments every year.</p>
 </div>
 <div class="col-md-6">
 <h3 class="text-uppercase mb-3">OUR VISION</h3>
