--- a/core.html
+++ b/core.html
@@ -179,7 +179,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 </div>
 </div>
 <div class="bg-secondary text-center p-4 height">
-<h5 class="text-uppercase">Aakash Kapoor</h5>
+<h5 class="text-uppercase">Akash Kapoor</h5>
 <span class="text-primary">Webmaster</span>
 <p>The thriving force of our creative segment, he has endless talents and a sharp, inquisitive mind. He not only leads but also creates an environment where every opinion is heard. A cooperative and sensitive companion for the team, who gives his best shots every time. Slightly reserved but super approachable, he's the friend we all look for, who makes it feel like home.
 </p>
